--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
 version: "2"
 services:
-  web:
+  api:
     build: .
     volumes:
       - ./:/app
     ports:
       - "3000:3000"
+    links:
+      - mongo
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
